// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navigation > matches snapshot with back link 1`] = `
<nav
  aria-label="Main navigation"
  class="flex items-center justify-between px-6 py-4 bg-beige-50 border-b border-beige-200"
>
  <span
    class="text-xl font-bold text-midnight-blue-900"
  >
    Tests
  </span>
  <a
    aria-disabled="false"
    class="inline-flex items-center justify-center font-medium rounded-md transition-colors duration-200 focus:outline-2 focus:outline-offset-2 focus:outline-moss-green-500 text-moss-green-500 bg-transparent hover:underline text-sm px-3 py-1.5"
    href="/"
  >
    Back to Tests
  </a>
</nav>
`;

exports[`Navigation > matches snapshot without back link (default state) 1`] = `
<nav
  aria-label="Main navigation"
  class="flex items-center justify-between px-6 py-4 bg-beige-50 border-b border-beige-200"
>
  <span
    class="text-xl font-bold text-midnight-blue-900"
  >
    Tests
  </span>
</nav>
`;
